# neurospike

./: README.md  asset-manifest.json  index.html  manifest.json  package-lock.json  package.json
.erb/configs/: webpack.config.base.ts
.github/workflows/: deploy-eduspike-web.yaml
eduspike/: package-lock.json  package.json
eduspike-web/: package-lock.json  package.json
eduspike-web/public/: index.html  manifest.json  short-eduspike-demo.mov
eduspike-web/src/: App.js  MobileLandingPage.js  defaultCodeStrings.js  index.css  index.js
eduspike/.trunk/: trunk.yaml
eduspike/public/: electrode.glb  package.json
neurospikelib/: README.md  neuron.schema.json  pyproject.toml
neurospikelib/archive/: lif.py
neurospikelib/neurospikelib/: adex.py  custom_lif_visualization.py  lif.py  lif_new.py  lif_output.py  main.py  testing_pulses.py
neurospikelib/neurospikelib/lif/: lif_new.py  lif_output.py
neurospikelib/src/neurospikelib/: adex.py  custom_lif_visualization.py  hh.py  hh_output.py  hh_spikes.py  lif.py  lif_output.py  main.py  testing_pulses.py  utils.py
neurospikelib/tests/: test_adex_helper.py  test_hh.py  test_hh_helper.py  test_neurospikelib.py
neurospikelib/tests/plot_comparisons/: hh_plot_comparisons.py
neurospikelib/tests/unit/: test_adex.py  test_lif.py  test_lif_helper.py
public/: single_neuron.glb
pyodide/: neurospikelib-0.1.0-py3-none-any.whl
src/main/: main.ts  preload.ts
src/renderer/: App.css  EditorComponent.tsx  LIFControlPanel.tsx  LIFPlotting.tsx  LIFSimulation.tsx  electrode.mtl  index.tsx
static/css/: main.38bf933b.css  (+5 more)
(+150 files in other folders)
