[tool.poetry]
name = "neurospikelib"
version = "0.1.0"
description = ""
authors = ["dillondesilva <dillon.desilva@geeksdiary.com>"]
packages = [
    { include = "neurospikelib", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scipy = "^1.14.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
